--- a/assets/stylesheets/application.css.scss
+++ b/assets/stylesheets/application.css.scss
@@ -28,33 +28,31 @@
         'components/prism',
         'components/mobile';
 
-@import 'pages/angular',
+@import 'pages/base',
+        'pages/angular',
+        'pages/apache',
         'pages/bower',
         'pages/c',
         'pages/chai',
+        'pages/clojure',
         'pages/coffeescript',
-        'pages/cordova',
         'pages/d3',
         'pages/ember',
         'pages/express',
+        'pages/git',
         'pages/go',
         'pages/haskell',
         'pages/jquery',
         'pages/knockout',
-        'pages/git',
-        'pages/grunt',
         'pages/laravel',
-        'pages/less',
-        'pages/lodash',
-        'pages/marionette',
-        'pages/markdown',
-        'pages/maxcdn',
+        'pages/lua',
         'pages/mdn',
+        'pages/meteor',
         'pages/modernizr',
         'pages/moment',
-        'pages/mongoose',
         'pages/nginx',
         'pages/node',
+        'pages/npm',
         'pages/php',
         'pages/phpunit',
         'pages/postgres',
@@ -64,7 +62,6 @@
         'pages/requirejs',
         'pages/rethinkdb',
         'pages/rfc',
-        'pages/sinon',
         'pages/socketio',
         'pages/sphinx',
         'pages/underscore',
