--- a/assets/stylesheets/components/_content.scss
+++ b/assets/stylesheets/components/_content.scss
@@ -205,15 +205,16 @@
   float: right;
   max-width: 15em;
   margin: .25rem 0 1.5rem 1.5rem;
-  padding: .75rem 1rem;
+  padding: .625rem 1rem;
   @extend %box;
 
-  + ._lined-heading { margin-top: 0; }
+  + h1, + ._lined-heading { margin-top: 0; }
 }
 
 ._toc-title {
-  margin: 0 0 .75em;
+  margin: 0 0 .5rem;
   font-size: inherit;
+  font-weight: bold;
 }
 
 ._toc-list {
@@ -221,6 +222,8 @@
   padding: 0 1em 0 0;
   list-style: none;
 }
+
+._toc-link { @extend %internal-link; }
 
 //
 // Static page
@@ -425,6 +428,11 @@
 ._splash-sponsor > ._maxcdn-logo {
   background-image: image-url('maxcdn-bw.png');
 
+  @if $style == 'dark' {
+    filter: invert(100%);
+    -webkit-filter: invert(100%);
+  }
+
   @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
     background-image: image-url('maxcdn-bw@2x.png');
   }
@@ -442,6 +450,11 @@
 
 ._splash-sponsor > ._shopify-logo {
   background-image: image-url('shopify-bw.png');
+
+  @if $style == 'dark' {
+    filter: invert(100%);
+    -webkit-filter: invert(100%);
+  }
 
   @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
     background-image: image-url('shopify-bw@2x.png');
