--- a/assets/stylesheets/pages/_rdoc.scss
+++ b/assets/stylesheets/pages/_rdoc.scss
@@ -1,11 +1,11 @@
 ._rdoc {
-  > .description, > .documentation-section { padding-left: 1rem; }
-  > .description > h2, header > h3, > h2 { @extend %block-heading; }
-  > .description > h2, header > h3, .method-heading { margin-left: -1rem; }
+  .description, > .documentation-section { padding-left: 1rem; }
+  .description > h2, header > h3, > h2 { @extend %block-heading; }
+  .description > h2, header > h3, .method-heading { margin-left: -1rem; }
   .description > h1 { font-size: 1rem; }
   .method-description > h2, h3, h4, h5, h6 { font-size: 1em; }
 
-  .method-heading {
+  .method-heading, .signature {
     font-weight: bold;
     @extend %block-label, %label-blue;
 
