--- a/assets/stylesheets/global/_variables.scss
+++ b/assets/stylesheets/global/_variables.scss
@@ -1,5 +1,7 @@
 $baseFont: 'Open Sans', Helvetica, Arial, sans-serif;
-$monoFont: 'Source Code Pro', 'Inconsolata-g', Consolas, Menlo, monospace;
+$monoFont: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+
+$style: 'light';
 
 $headerHeight: 3rem;
 $sidebarWidth: 18rem;
