modified styles bases

--- a/assets/stylesheets/pages/_mdn.scss
+++ b/assets/stylesheets/pages/_mdn.scss
@@ -4,7 +4,7 @@
        -moz-columns: 16em;
             columns: 16em;
 
-    > span {
+    span {
       display: block;
       font-size: 1rem;
       font-weight: bold;
