modified base styles

--- a/assets/stylesheets/components/_page.scss
+++ b/assets/stylesheets/components/_page.scss
@@ -62,7 +62,7 @@
 ._attribution {
   clear: both;
   margin: 2rem 0 1.5rem;
-  font-size: .75rem;
+  font-size: 80%;
   color: $textColorLight;
   text-align: center;
   -webkit-font-smoothing: subpixel-antialiased;
