--- a/assets/stylesheets/global/_base.scss
+++ b/assets/stylesheets/global/_base.scss
@@ -34,7 +34,7 @@ b, strong { font-weight: bold; }
 
 small { font-size: .9em; }
 
-ul, ol {
+._page ul, ._page ol {
   margin: 1.5em 0;
   padding: 0 0 0 2em;
   list-style: disc outside;
@@ -45,7 +45,6 @@ ol { list-style-type: decimal; }
 ol ol { list-style-type: lower-alpha; }
 ol ol ol { list-style-type: lower-roman; }
 
-li + li { margin-top: .25em; }
 li > ul, li > ol, dd > ul, dd > ol { margin: .5em 0; }
 li > p { margin-bottom: .25em; }
 
