change capital letter for lower letter in an image

--- a/assets/stylesheets/global/_classes.scss
+++ b/assets/stylesheets/global/_classes.scss
@@ -95,7 +95,7 @@
 //
 
 %external-link {
-  background: url(../img/Icon_external_link.png)center right no-repeat;
+  background: url(../img/icon_external_link.png)center right no-repeat;
   padding-right: 13px;
   padding-top: 10px;
 }
